no gcp tem que funcionar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       # - ./examples/intro-example/dags:/usr/local/airflow/dags
       # Uncomment to include custom plugins
       # - ./plugins:/usr/local/airflow/plugins
+      # - ./requirements.txt:/requirements.txt
     ports:
       - "8080:8080"
     command: webserver
